--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button>Submit</button>
         <div class="info">
             <h2>Contact Info</h2>
-            <p>Here's the info'</p>
+            <p>Here's the info</p>
         </div>
     </div>
 </body>
